@@ -1,4 +1,4 @@
-#   Copyright 1988, 1990, 1991, 1992, 1994, 1997, 1999, 2000, 2002
+#   Copyright 1988, 1990, 1991, 1992, 1994, 1997, 1999, 2000, 2002, 2003
 #   Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
@@ -52,7 +52,7 @@ proc do_steps_and_nexts {} {
  
     gdb_reinitialize_dir $srcdir/..
 
-    for {set count 0} {$count < 26} {incr count} {
+    for {set count 0} {$count < 32} {incr count} {
 	send_gdb "list\n"
 	# NOTE: carlton/2002-12-11: The "initial brace" and
 	# "current_directory initialization" possibilities happen to
@@ -327,10 +327,31 @@ proc test_with_self { executable } {
     # If we don't actually enter the xmalloc call when we give a
     # step command that seems like a genuine bug.  It seems to happen
     # on most RISC processors.
+    # NOTE drow/2003-06-22: However, if we step back to the preceding two
+    # lines, just keep stepping until we enter.
+    set stepped_back 0
     setup_xfail "alpha-*-*" "mips-*-*"
     set description "step into xmalloc call"
     send_gdb "step\n"
     gdb_expect {
+	-re "ncmd = 0;.*$gdb_prompt $" {
+	    set stepped_back 1
+	    send_gdb "step\n"
+	    exp_continue
+	}
+	-re "dirsize = 1;.*$gdb_prompt $" {
+	    set stepped_back 1
+	    send_gdb "step\n"
+	    exp_continue
+	}
+	-re ".*dirarg = .* xmalloc.*$gdb_prompt $" {
+	    if { $stepped_back == 1 } {
+		send_gdb "step\n"
+		exp_continue
+	    } else {
+		fail "$description"
+	    }
+	}
 	-re "xmalloc.*size=.*at.*utils.c.*$gdb_prompt $" {
 	    pass "$description"
 	}
